chore: migrate FastGPU to Maven and JitPack